--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
+* {
+  font-family: bpreplaybold, -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
+  font-size: 18px;
+  box-sizing: border-box;
+}
+h1 {
+  margin: 0;
+}
+.container {
+  width: 80vw;
+  margin-left: auto;
+  margin-right: auto;
+}
 .App {
-  text-align: center;
+  margin: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  height: 100vh;
+  width: 100%;
+  color: black;
+  background-color: #001e28;
+  z-index: 100;
+  font-size: 2em;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App::before {
+  content: '';
+  position: absolute;
+  background-position: left;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-size: cover;
+  background-image: url('./img/bg.svg');
+  background-color: black;
+  opacity: 0.5;
+  z-index: -100;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.game-container {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+}
+
+.main-area {
+  height: 80vh;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+}
+.game-title {
+  text-shadow: rgb(195, 114, 5) 0px 0.25rem 0px;
+  color: rgb(232, 230, 227);
+  text-transform: uppercase;
+  font-size: 3rem;
+}
+.logs {
+  height: 80vh;
+  width: 30%;
+  margin-left: -5%;
+  margin-top: 2vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+}
+.log-header {
+  height: 6vh;
+  width: 100%;
+}
+
+.too-high-area {
+  width: 100%;
+  height: 39vh;
+  border-radius: 10px;
+  border: 3px solid var(--too-high-color);
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.too-low-area {
+  width: 100%;
+  height: 39vh;
+  border-radius: 10px;
+  border: 3px solid var(--too-low-color);
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.too-high-title {
+  background-color: var(--too-high-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  text-transform: uppercase;
+}
+
+.too-low-title {
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--too-low-color);
+  text-transform: uppercase;
+}
+.prompts {
+  width: 75%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.digits-to-guess > form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+}
+.digits-to-guess {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
+  /* margin-bottom: 5px; */
+}
+
+form > h1 {
+  margin-bottom: 5px;
+}
+input {
+  text-align: center;
+  display: block;
+  border: 1px solid #333;
+  border-radius: 10px;
+  width: 50%;
+  margin: auto;
+  margin-bottom: 5px;
+  font-size: 1.5em;
+}
+.btn {
+  width: 50%;
+  text-transform: capitalize;
+  margin: auto;
+  background-color: green;
   color: white;
-}
+  border: none;
+  font-size: 1.5em;
 
-.App-link {
-  color: #61dafb;
+  /* border: 1px solid #333; */
+  border-radius: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.error {
+  color: red;
+  margin: 10px;
+  max-width: 50%;
+  text-align: center;
+  margin: auto;
+  font-size: 0.5em;
+}
+.m-0 {
+  margin: 0;
 }
